# Vessel-Centerline-Extraction

./: .gitignore  CMakeLists.txt  Centerline.cpp  Centerline.h  NonManifoldSurfaceChecker.cpp  NonManifoldSurfaceChecker.h  README.md  interactorStyleCenterline.cpp  interactorStyleCenterline.h  main.cpp
doc/: build-en.md  build-ubuntu-en.md
test_data/left/: centerline.vtp  leftlumen.stl  leftlumen_capped.stl
test_data/right/: centerline.vtp  lumen.stl  rightlumen.stl  rightlumen_capped.stl
